feat: Firewall Control Endpoints
